Base Typography and normalize.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <div class="wrapper">
     <img class="logo" src="svg/logo.svg"></img>
-    <h2>Designer &amp; Developer</h2>
+    <h2 class='sublogo'>Designer &amp; Developer</h2>
 
     <section class="social-links">
       <ul>
