Change logo to include subtext in the svg

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <img class="logo" src="svg/logo.svg"></img>
-    <h2 class='sublogo'>Designer &amp; Developer</h2>
+    <img class="logo" src="svg/logo_sub.svg"></img>
 
     <section class="social-links">
       <ul>
