Start to mess with SVG sprites.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <!-- This is included for later use -->
+  <img src="svg/icon_font.svg" style="display:none"></img>
+
   <div class="wrapper">
     <img class="logo" src="svg/logo_sub.svg"></img>
 
     <section class="social-links">
+
       <ul>
-         <li><a href="https://github.com/menor/">GitHub</a></li>
+         <li>
+            <svg viewBox="0 0 100 100" class="icon">
+              <use xlink:href="#github_icon"></use>
+            </svg>
+          <a class="github_link" href="https://github.com/menor/">GitHub</a></li>
          <li><a href="https://dribbble.com/josemenor">Dribbble</a></li>
          <li><a href="http://scriptogr.am/menor/">Blog</a></li>
          <li><a href="https://twitter.com/menor">Twitter</a></li>
