--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 
     <section class="social-links">
 
+      
       <ul>
          <li>
-            <svg viewBox="0 0 100 100" class="icon">
-              <use xlink:href="#github_icon"></use>
-            </svg>
-          <a class="github_link" href="https://github.com/menor/">GitHub</a></li>
-         <li><a href="https://dribbble.com/josemenor">Dribbble</a></li>
+            <a class="github_link" href="https://github.com/menor/">GitHub</a>
+          </li>
+         <li>
+            <a class="dribbble_link" href="https://dribbble.com/josemenor">Dribbble</a>
+          </li>
          <li><a href="http://scriptogr.am/menor/">Blog</a></li>
          <li><a href="https://twitter.com/menor">Twitter</a></li>
          <li><a href="https://www.linkedin.com/in/josemenor">LinkedIn</a></li>
