Add resume section.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </article>
 
       <article>
-        <h3>Skill-A-Rama</h3>
+        <h4>Skill-A-Rama</h4>
         <p>
           I know Ruby on Rails, Javascript, HTML, CSS and SASS, I believe that Test Driven Development and OO is the way to go (although I want to learn functional programming too), and of course know my way around git.
         </p>
@@ -65,16 +65,16 @@
       </article>
 
       <article>
-        <h3>This time is personal</h3>
+        <h4>This time is personal</h4>
         <p>
           I'm currently in Europe, looking for an opportunity to help to create something useful, exciting and new.
         </p>
       </article>
 
       <article>
-        <h3>It's a resume!!</h3>
+        <h4>It's a resume!!</h4>
         <p class="resume-paragraph">
-          Does anyone download this things ??? Anyways here is my resume
+          Does anyone download this things ??? Anyway here is my resume
         </p>
         <a href="/jose_menor_resume.pdf" class="resume-link">
           <span aria-hidden="true" data-icon="&#xe806;" class="icon-resume"></span>
