--- a/index.html
+++ b/index.html
@@ -90,11 +90,13 @@
         These include a little explanation about process to show how I work, you can check more graphic stuff at <a href="">my dribbble</a> and I'm always pushing code to <a href="">my GitHub</a>
       </p>
       <ul class="works">
-        <li><a href=""><img class="work-image" src="" alt=""></a></li>
-        <li><a href="">Malgusto</a></li>
-        <li><a href="">Poster Design</a></li>
-        <li><a href="">Malgusto Stuff</a></li>
-        <li><a href="">Survey Slug</a></li>
+        <li><a href="#"><img class="work-image" src="img/betterbet.png" alt="Better Bet"></a></li>
+        <li><a href="#"><img class="work-image" src="img/malgusto-productpage.png" alt="Malgusto eCommerce"></a></li>
+        <li><a href="#"><img class="work-image" src="img/filmposters.jpg" alt="Film Poster Design"></a></li>
+        <li><a href="#"><img class="work-image" src="img/gigposters.jpg" alt="Gig Poster Design"></a></li>
+        <li><a href="#"><img class="work-image" src="img/surveyslug.png" alt="Survey Slug"></a></li>
+        <li><a href="#"><img class="work-image" src="img/malgustostuff.jpg" alt="Malgusto T-shirts"></a></li>
+        <li><a href="">ImgIn</a></li>
       </ul>
     </section>
 
