Fix textarea start messing with footer.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <label for="email">Email:</label>
         <input type="email" name="email" pattern="/^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$/" required></input>
         <label for="message">Message:</label>
-        <input type="text" name="message" size="78"></input>
+        <textarea name="message" ></textarea>
         <!-- <p class="email-option">You can <a href="mailto:jose@josemenor.com">send me an email</a> instead, if you prefer.</p> -->
         <input type="submit" value="send"></input>
       </form>
@@ -119,7 +119,43 @@
   </section>
 
   <footer>
-   Jose Menor
+    <div class="footer-logo">
+      <a href="#"><img src="svg/logo_sub.svg" alt="Jose Menor Logo"></a>
+    </div>
+    
+    <ul class="footer-social">
+        <li>
+        <a class="github_link" href="https://github.com/menor/">
+          <span aria-hidden="true" data-icon="&#xe801;" class="icon-github"></span>
+          <span class="screen-reader-text">GitHub</span>
+        </a>
+      </li>
+     <li>
+        <a class="dribbble_link" href="https://dribbble.com/josemenor">
+          <span aria-hidden="true" data-icon="&#xe802;" class="icon-dribbble"></span>
+          <span class="screen-reader-text">Dribbble</span>
+        </a>
+      </li>
+      <li>
+        <a href="http://scriptogr.am/menor/">
+          <span aria-hidden="true" data-icon="&#xe803;" class="icon-blog"></span>
+          <span class="screen-reader-text">Blog</span>
+        </a>
+      </li>
+      <li>
+
+        <a href="https://twitter.com/menor">
+          <span aria-hidden="true" data-icon="&#xe804;" class="icon-twitter"></span>
+          <span class="screen-reader-text">Twitter</span>
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/josemenor">
+          <span aria-hidden="true" data-icon="&#xe805;" class="icon-linkedin"></span>
+          <span class="screen-reader-text">GitHub</span>    
+        </a>
+      </li>
+    </ul>
   </footer>
 
 </body>
