--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
      </ul> 
   </section>
   <div class="wrapper">
-    <img class="logo" src="svg/logo_sub.svg"></img>
 
+    <header>
+      <img class="logo" src="svg/logo_sub.svg"></img>
+    </header>
 
     <section class="about">
       <article>
@@ -74,7 +76,7 @@
       <article>
         <h4>It's a resume!!</h4>
         <p class="resume-paragraph">
-          Does anyone download this things ??? Anyway here is my resume
+          Does anyone download this things ??? Anyways here is my resume
         </p>
         <a href="/jose_menor_resume.pdf" class="resume-link">
           <span aria-hidden="true" data-icon="&#xe806;" class="icon-resume"></span>
@@ -96,7 +98,7 @@
         <li><a href="#"><img class="work-image" src="img/gigposters.jpg" alt="Gig Poster Design"></a></li>
         <li><a href="#"><img class="work-image" src="img/surveyslug.png" alt="Survey Slug"></a></li>
         <li><a href="#"><img class="work-image" src="img/malgustostuff.jpg" alt="Malgusto T-shirts"></a></li>
-        <li><a href="">ImgIn</a></li>
+        <li><a href="#"><img class="work-image" src="img/imgin.png" alt="Imgin Ruby Gem"></a></li>
       </ul>
     </section>
 
