Change order of stylesheet imports.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
     <section class="about">
       <article>
+        <h4>Why can't I be you</h4>
         <p>
           I've been a graphic designer for more than 10 years, and always loved web development. So I decided to go to San Francisco and become a web developer. After 9 weeks at Dev Bootcamp, I can say I made the right choice.
         </p>
