--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
   </section>
 
   <footer>
-    <div class="footer-logo">
-      <a href="#"><img src="svg/logo_sub.svg" alt="Jose Menor Logo"></a>
-    </div>
+    <!-- <div class="footer-logo"> -->
+      <!-- <a href="#"><img src="svg/logo_sub.svg" alt="Jose Menor Logo"></a> -->
+    <!-- </div> -->
     <div class="addendum">
       <p>Site made by Jos&eacute Menor himself, using <a href="http://gulpjs.com/">Gulp</a>, <a href="http://bourbon.io/">Bourbon</a> and <a href="http://neat.bourbon.io/">Neat</a>. Source is on GitHub</p>
     </div>
