--- a/index.html
+++ b/index.html
@@ -101,26 +101,19 @@
 
   </div>
 
-  <section class="contact-form">
-    <div class="form-container">
+  <section class="contact">
+    <div class="contact-container">
       <h2>Make me an offer I can't refuse</h2>
-      <form action="">
-        <label for="name">Name:</label>
-        <input type="text" name="name" required ></input>
-        <label for="email">Email:</label>
-        <input type="email" name="email" pattern="/^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$/" required></input>
-        <label for="message">Message:</label>
-        <textarea name="message" ></textarea>
-        <!-- <p class="email-option">You can <a href="mailto:jose@josemenor.com">send me an email</a> instead, if you prefer.</p> -->
-        <input type="submit" value="send"></input>
-      </form>
+      <p>
+        You can reach me at: <span class="mal">jose[at]josemenor.com</span>
+      </p>
+      <p>
+        Or through your favourite <a href="#">social thing</a>
+      </p>
     </div>
   </section>
 
   <footer>
-    <!-- <div class="footer-logo"> -->
-      <!-- <a href="#"><img src="svg/logo_sub.svg" alt="Jose Menor Logo"></a> -->
-    <!-- </div> -->
     <div class="addendum">
       <p>Site made by Jos&eacute Menor himself, using <a href="http://gulpjs.com/">Gulp</a>, <a href="http://bourbon.io/">Bourbon</a> and <a href="http://neat.bourbon.io/">Neat</a>. Source is on GitHub</p>
     </div>
