Change a word in betterbet article.

--- a/projects/betterbet.html
+++ b/projects/betterbet.html
@@ -106,7 +106,7 @@
 <div class="block">
 <h2>Lessons learned</h2>
 
-<p>Communicate, I know it's a topic but its importance is vital to a project. We have some moments where different people in the team were changing the codebase, i.e., the person doing the Javascript changes a class name, and the team leader merges the pull request, then the person doing the styling pulls form master and its design is broken.</p>
+<p>Communicate, I know it's a commonplace but its importance is vital to a project. We have some moments where different people in the team were changing the codebase, i.e., the person doing the Javascript changes a class name, and the team leader merges the pull request, then the person doing the styling pulls form master and its design is broken.</p>
 <p>CSS is hard because you can't not run tests on it (although now you can use something like <a href="https://github.com/diffux/diffux">Diffux</a>, I wish I had known it before this project), so you have to make clear that everyone changing views knows the logic behind class names. You can use some standard like SMACSS or BEM, but even though you have to communicate.</p>
 <p>
   You can visit BetterBet <a href=" http://betterbet.herokuapp.com/">here</a> landing page is not that great, but awesomeness awaits you if you login as test@example.com with 1234 as password .
