--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <p class="resume-paragraph">
           Does anyone download this things ??? Anyways here is my resume
         </p>
-        <a href="/jose_menor_resume.pdf" class="resume-link">
+        <a href="downloads/jose_menor_resume.pdf" class="resume-link">
           <span aria-hidden="true" data-icon="&#xe806;" class="icon-resume"></span>
           <span class="screen-reader-text">Download Resume</span>
         </a>
