Add article navigation.

--- a/projects/betterbet.html
+++ b/projects/betterbet.html
@@ -49,7 +49,9 @@
   <div class="wrapper">
 
     <header>
-      <img class="logo" src="../svg/logo_sub.svg"></img>
+      <a href="../index.html">
+        <img class="logo" src="../svg/logo_sub.svg"></img>
+      </a>
     </header>
 
 
@@ -114,7 +116,11 @@
 </div>
 </section>
 <nav>
-  previous Home next
+  <ul class="project-nav">
+    <li>&larr; Previous</li>
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="malgusto-web.html">Next &rarr;</a></li>
+  </ul>
 </nav>
 </div>
 <section class="contact">
