--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         These include a little explanation about process to show how I work, you can check more graphic stuff at <a href="">my dribbble</a> and I'm always pushing code to <a href="">my GitHub</a>
       </p>
       <ul class="works">
-        <li><a href="#"><img class="work-image" src="img/betterbet.png" alt="Better Bet"></a></li>
+        <li><a href="projects/betterbet.html"><img class="work-image" src="img/betterbet.png" alt="Better Bet"></a></li>
         <li><a href="#"><img class="work-image" src="img/malgusto-productpage.png" alt="Malgusto eCommerce"></a></li>
         <li><a href="#"><img class="work-image" src="img/filmposters.jpg" alt="Film Poster Design"></a></li>
         <li><a href="#"><img class="work-image" src="img/gigposters.jpg" alt="Gig Poster Design"></a></li>
