--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <li><a href="#"><img class="work-image" src="img/gigposters.jpg" alt="Gig Poster Design"></a></li>
         <li><a href="#"><img class="work-image" src="img/surveyslug.png" alt="Survey Slug"></a></li>
         <li><a href="#"><img class="work-image" src="img/malgustostuff.jpg" alt="Malgusto T-shirts"></a></li>
-        <li><a href="#"><img class="work-image" src="img/imgin.png" alt="Imgin Ruby Gem"></a></li>
+        <li><a href="#"><img class="work-image" src="img/Imgin.png" alt="Imgin Ruby Gem"></a></li>
       </ul>
     </section>
 
