Add malgusto web article.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Jos&eacute Menor - Developer &nbsp Designer</title>
   <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -90,7 +90,7 @@
       </p>
       <ul class="works">
         <li><a href="projects/betterbet.html"><img class="work-image" src="img/betterbet.png" alt="Better Bet"></a></li>
-        <li><a href="#"><img class="work-image" src="img/malgusto-productpage.png" alt="Malgusto eCommerce"></a></li>
+        <li><a href="projects/malgusto-web.html"><img class="work-image" src="img/malgusto-productpage.png" alt="Malgusto eCommerce"></a></li>
         <li><a href="#"><img class="work-image" src="img/filmposters.jpg" alt="Film Poster Design"></a></li>
         <li><a href="#"><img class="work-image" src="img/gigposters.jpg" alt="Gig Poster Design"></a></li>
         <li><a href="#"><img class="work-image" src="img/surveyslug.png" alt="Survey Slug"></a></li>
