--- a/projects/malgusto-web.html
+++ b/projects/malgusto-web.html
@@ -86,7 +86,7 @@
 </section>
 <nav>
   <ul class="project-nav">
-    <li><a href="malgusto-web.html">&larr; Previous</a></li>
+    <li><a href="betterbet.html">&larr; Previous</a></li>
     <li><a href="../index.html">Home</a></li>
     <li><a href="film-posters.html">Next &rarr;</a></li>
   </ul>
