--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <ul class="works">
         <li><a href="projects/betterbet.html"><img class="work-image" src="img/betterbet.png" alt="Better Bet"></a></li>
         <li><a href="projects/malgusto-web.html"><img class="work-image" src="img/malgusto-productpage.png" alt="Malgusto eCommerce"></a></li>
-        <li><a href="#"><img class="work-image" src="img/filmposters.jpg" alt="Film Poster Design"></a></li>
+        <li><a href="projects/filmposters.html"><img class="work-image" src="img/filmposters.jpg" alt="Film Poster Design"></a></li>
         <li><a href="#"><img class="work-image" src="img/gigposters.jpg" alt="Gig Poster Design"></a></li>
         <li><a href="#"><img class="work-image" src="img/surveyslug.png" alt="Survey Slug"></a></li>
         <li><a href="#"><img class="work-image" src="img/malgustostuff.jpg" alt="Malgusto T-shirts"></a></li>
