Add github link to the footer(s)

--- a/projects/betterbet.html
+++ b/projects/betterbet.html
@@ -137,8 +137,8 @@
 
 <footer>
   <div class="addendum">
-    <p>Site made by Jos&eacute Menor himself, using <a href="http://gulpjs.com/">Gulp</a>, <a href="http://bourbon.io/">Bourbon</a> and <a href="http://neat.bourbon.io/">Neat</a>. Source is on GitHub</p>
-  </div>
+      <p>Site made by Jos&eacute Menor himself, using <a href="http://gulpjs.com/">Gulp</a>, <a href="http://bourbon.io/">Bourbon</a> and <a href="http://neat.bourbon.io/">Neat</a>. Source is on <a href="https://github.com/menor/menor.github.io">GitHub</a></p>
+    </div>
 </footer>
 
 </body>
