--- a/projects/film-posters.html
+++ b/projects/film-posters.html
@@ -62,7 +62,7 @@
 <h2>At the Drive-In</h2>
 
 <p>
-  While working at Malgusto with Marga Martinez, we realized how we missed doing posters to try new things apart from T-shirt design. So we decided to make a series of posters for films we admired. Marga did the illustrations here, my work was to come up with the idea, and sketch the composition. I also added typography and created the colour palettes used. Directors James Gunn and Oscar Aibar liked what we did for their movies, and we learn some tricks about how to fit lots of references into a single image.
+  While working at Malgusto with <a href="http://margamartinez.com">Marga Martinez</a>, we realized how we missed doing posters to try new things apart from T-shirt design. So we decided to make a series of posters for films we admired. Marga did the illustrations here, my work was to come up with the idea, and sketch the composition. I also added typography and created the colour palettes used. Directors James Gunn and Oscar Aibar liked what we did for their movies, and we learn some tricks about how to fit lots of references into a single image.
 </p>
 
 <img class="project-image" src="../img/projects/filmposters_aibar.jpg" alt="Posters for Aibar movies">
@@ -91,9 +91,9 @@
 
 
 <footer>
-  <div class="addendum">
-    <p>Site made by Jos&eacute Menor himself, using <a href="http://gulpjs.com/">Gulp</a>, <a href="http://bourbon.io/">Bourbon</a> and <a href="http://neat.bourbon.io/">Neat</a>. Source is on GitHub</p>
-  </div>
+   <div class="addendum">
+      <p>Site made by Jos&eacute Menor himself, using <a href="http://gulpjs.com/">Gulp</a>, <a href="http://bourbon.io/">Bourbon</a> and <a href="http://neat.bourbon.io/">Neat</a>. Source is on <a href="https://github.com/menor/menor.github.io">GitHub</a></p>
+    </div>
 </footer>
 
 </body>
