Add gigposters article.

--- a/projects/gigposters.html
+++ b/projects/gigposters.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>Jose Menor - Film Posters</title>
+<title>Jose Menor - GigPosters</title>
 <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
@@ -56,25 +56,39 @@
 
 <section class="project">
 
-<h1>Film Posters</h1>
-<img class="header-image" src="../img/filmposters.jpg" alt="Malgusto FIlm Posters">
+<h1>GigPosters</h1>
+<img class="header-image" src="../img/gigposters.jpg" alt="Gigposters">
 <div class="block">
-<h2>At the Drive-In</h2>
+<h2>It's only R'n'R but they need posters</h2>
 
-<p>
-  While working at Malgusto with <a href="http://margamartinez.com">Marga Martinez</a>, we realized how we missed doing posters to try new things apart from T-shirt design. So we decided to make a series of posters for films we admired. Marga did the illustrations here, my work was to come up with the idea, and sketch the composition. I also added typography and created the colour palettes used. Directors James Gunn and Oscar Aibar liked what we did for their movies, and we learn some tricks about how to fit lots of references into a single image.
-</p>
+<p>It started when we needed posters to promote my band shows, I always liked collages and enjoyed a lot to create 'low-fi' posters with no client in mind, just for the sake of exploring new techniques and ideas.</p>
 
-<img class="project-image" src="../img/projects/filmposters_aibar.jpg" alt="Posters for Aibar movies">
-<img class="project-image" src="../img/projects/filmposters_house.jpg" alt="More film posters">
 </div>
-<p>You can check the posters in more detail, and some other work at the <a href="http://mlgst.tumblr.com">Malgusto tumblr</a>
+<div class="block">
+<h2>Best things in life ain't free</h2>
+
+<p>Time passed and i met band promoters that also needed posters, I was a friend and budget in that kind of rock tours is very low so I designed the posters for very little money, but they gave me freedom to do my thing.</p>
+<img class="project-image" src="../img/projects/gigposters-cramps.jpg" alt="Some GigPosters">
+<p>I enjoyed this jobs and they taught me a lot about working with limited budget and time. Posters were normally printed with two inks and I came up with a half A2 format that allowed us to get two posters for the price of one, it fit on the doors of the bars where they were hanged, and made them stand out from the rest of the posters.</p>
+<img class="project-image" src="../img/projects/gigposters-kicks.jpg" alt="Some GigPosters">
+</div>
+<div class="block">
+
+<h2>Fame and fortune</h2>
+
+<p>I worked for some really good bands like the Black Lips, Natural Kicks or the Coyote Men and it led me to several international expositions of my posters, and some LP sleeve designs</p>
+<img class="project-image" src="../img/projects/gigposters-blowtops.jpg" alt="Some GigPosters">
+<img class="project-image" src="../img/projects/gigposters-reilly.jpg" alt="Some GigPosters">
+
+
+</div>
+
 </section>
 <nav>
   <ul class="project-nav">
-    <li><a href="malgusto-web.html">&larr; Previous</a></li>
+    <li><a href="film-posters.html">&larr; Previous</a></li>
     <li><a href="../index.html">Home</a></li>
-    <li><a href="gigposters.html">Next &rarr;</a></li>
+    <li><a href="survey-slug.html">Next &rarr;</a></li>
   </ul>
 </nav>
 </div>
