Add malgusto designs page.

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <li><a href="projects/film-posters.html"><img class="work-image" src="img/filmposters.jpg" alt="Film Poster Design"></a></li>
         <li><a href="projects/gigposters.html"><img class="work-image" src="img/gigposters.jpg" alt="Gig Poster Design"></a></li>
         <li><a href="projects/survey-slug.html"><img class="work-image" src="img/surveyslug.png" alt="Survey Slug"></a></li>
-        <li><a href="#"><img class="work-image" src="img/malgustostuff.jpg" alt="Malgusto T-shirts"></a></li>
-        <li><a href="#"><img class="work-image" src="img/Imgin.png" alt="Imgin Ruby Gem"></a></li>
+        <li><a href="projects/malgusto.html"><img class="work-image" src="img/malgustostuff.jpg" alt="Malgusto T-shirts"></a></li>
+        <li><a href="projects/imgin.html"><img class="work-image" src="img/Imgin.png" alt="Imgin Ruby Gem"></a></li>
       </ul>
     </section>
 
