Add ImgIn page.

--- a/projects/betterbet.html
+++ b/projects/betterbet.html
@@ -112,6 +112,7 @@
 <p>
   You can visit BetterBet <a href=" http://betterbet.herokuapp.com/">here</a> landing page is not that great, but awesomeness awaits you if you login as test@example.com with 1234 as password .
 </p>
+<p>Source code is <a href="https://github.com/banana-slugs-2014/BetterBet">here</a></p>
 </div>
 </section>
 <nav>
