Fix links to dribbble and github.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section class="portfolio">
       <h2>Some of my work</h2>
       <p>
-        These include a little explanation about process to show how I work, you can check more graphic stuff at <a href="">my dribbble</a> and I'm always pushing code to <a href="">my GitHub</a>
+        These include a little explanation about process to show how I work, you can check more graphic stuff at <a href="https://dribbble.com/josemenor">my dribbble</a> and I'm always pushing code to <a href="https://github.com/menor">my GitHub</a>
       </p>
       <ul class="works">
         <li><a href="projects/betterbet.html"><img class="work-image" src="img/betterbet.png" alt="Better Bet"></a></li>
