--- a/projects/betterbet.html
+++ b/projects/betterbet.html
@@ -141,6 +141,16 @@
       <p>Site made by Jos&eacute Menor himself, using <a href="http://gulpjs.com/">Gulp</a>, <a href="http://bourbon.io/">Bourbon</a> and <a href="http://neat.bourbon.io/">Neat</a>. Source is on <a href="https://github.com/menor/menor.github.io">GitHub</a></p>
     </div>
 </footer>
+  <!-- Google Analytics -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-51641274-1', 'menor.github.io');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
