Add basic image captions.

--- a/index.html
+++ b/index.html
@@ -89,13 +89,69 @@
         These include a little explanation about process to show how I work, you can check more graphic stuff at <a href="https://dribbble.com/josemenor">my dribbble</a> and I'm always pushing code to <a href="https://github.com/menor">my GitHub</a>
       </p>
       <ul class="works">
-        <li><a href="projects/betterbet.html"><img class="work-image" src="img/betterbet.png" alt="Better Bet"></a></li>
-        <li><a href="projects/malgusto-web.html"><img class="work-image" src="img/malgusto-productpage.png" alt="Malgusto eCommerce"></a></li>
-        <li><a href="projects/film-posters.html"><img class="work-image" src="img/filmposters.jpg" alt="Film Poster Design"></a></li>
-        <li><a href="projects/gigposters.html"><img class="work-image" src="img/gigposters.jpg" alt="Gig Poster Design"></a></li>
-        <li><a href="projects/survey-slug.html"><img class="work-image" src="img/surveyslug.png" alt="Survey Slug"></a></li>
-        <li><a href="projects/malgusto.html"><img class="work-image" src="img/malgustostuff.jpg" alt="Malgusto T-shirts"></a></li>
-        <li><a href="projects/imgin.html"><img class="work-image" src="img/Imgin.png" alt="Imgin Ruby Gem"></a></li>
+        <li>
+          <a href="projects/betterbet.html">
+            <img class="work-image" src="img/betterbet.png" alt="Better Bet">
+            <span class="image-caption project-code">
+              <h3>Better Bet</h3>
+              <p>Web App. Click for details.</p>
+            </span>
+          </a>
+        </li>
+        <li>
+          <a href="projects/malgusto-web.html">
+            <img class="work-image" src="img/malgusto-productpage.png" alt="Malgusto eCommerce">
+            <span class="image-caption project-code">
+              <h3>Malgusto Web</h3>
+              <p>Web Design. Click for details.</p>
+            </span>
+          </a>
+        </li>
+        <li>
+          <a href="projects/film-posters.html">
+            <img class="work-image" src="img/filmposters.jpg" alt="Film Poster Design">
+            <span class="image-caption project-design">
+              <h3>Film Posters</h3>
+              <p>Graphic Design. Click for details.</p>
+            </span>
+          </a>
+        </li>
+        <li>
+          <a href="projects/gigposters.html">
+            <img class="work-image" src="img/gigposters.jpg" alt="Gig Poster Design">
+            <span class="image-caption project-design">
+              <h3>Rock Posters</h3>
+              <p>Graphic Design. Click for details.</p>
+            </span>
+          </a>
+        </li>
+        <li>
+          <a href="projects/survey-slug.html">
+            <img class="work-image" src="img/surveyslug.png" alt="Survey Slug">
+            <span class="image-caption project-design">
+              <h3>Survey Slug</h3>
+              <p>Web App. Click for details.</p>
+            </span>
+          </a>
+        </li>
+        <li>
+          <a href="projects/malgusto.html">
+            <img class="work-image" src="img/malgustostuff.jpg" alt="Malgusto T-shirts">
+            <span class="image-caption project-design">
+              <h3>Malgusto T-Shirts</h3>
+              <p>Graphic Design. Click for details.</p>
+            </span>
+          </a>
+        </li>
+        <li>
+          <a href="projects/imgin.html">
+            <img class="work-image" src="img/Imgin.png" alt="Imgin Ruby Gem">
+            <span class="image-caption project-code">
+              <h3>ImgIn</h3>
+              <p>Ruby Gem. Click for details.</p>
+            </span>
+          </a>
+        </li>
       </ul>
     </section>
 
