Fix external links on betterbet page

--- a/projects/betterbet.html
+++ b/projects/betterbet.html
@@ -12,7 +12,7 @@
 <body>
 
   <section class="social-links">
-    
+
     <ul>
      <li>
         <a class="github_link" href="https://github.com/menor/">
@@ -41,10 +41,10 @@
       <li>
         <a href="https://www.linkedin.com/in/josemenor">
           <span aria-hidden="true" data-icon="&#xe805;" class="icon-linkedin"></span>
-          <span class="screen-reader-text">GitHub</span>    
+          <span class="screen-reader-text">GitHub</span>
         </a>
       </li>
-     </ul> 
+     </ul>
   </section>
   <div class="wrapper">
 
@@ -78,7 +78,7 @@
 <div class="block">
 <h2>Limitations</h2>
 
-<p>I was familiar with the <a href="neat.bourbon.io">Neat</a> framework from <a href="http://thoughtbot.com/">Thoughbot</a>, I love this framework because it is very simple and flexible, and keeps the HTML and CSS free of presentation class names. It also allows you to prototype and try ideas really fast, and takes care of a lot of browser render differences. So, having just 5 days to complete the project, Neat was the way to go.</p>
+<p>I was familiar with the <a href="https://neat.bourbon.io">Neat</a> framework from <a href="http://thoughtbot.com/">Thoughbot</a>, I love this framework because it is very simple and flexible, and keeps the HTML and CSS free of presentation class names. It also allows you to prototype and try ideas really fast, and takes care of a lot of browser render differences. So, having just 5 days to complete the project, Neat was the way to go.</p>
 </div>
 
 <div class="block">
@@ -100,7 +100,7 @@
 <div class="block">
 <h2>Crisis</h2>
 
-<p>Two days from our presentation and crisis showed up, I was sited next to <a href="ladymozzarella.github.io">Brittany Mazza</a>, she was writing the tests and I was doing the styling and we were going crazy. We had lots of different views for each model, so every time we wanted to test or style something we have to do it in at least three different places.</p>
+<p>Two days from our presentation and crisis showed up, I was sited next to <a href="https://ladymozzarella.github.io">Brittany Mazza</a>, she was writing the tests and I was doing the styling and we were going crazy. We had lots of different views for each model, so every time we wanted to test or style something we have to do it in at least three different places.</p>
 <p>Luckily we decided to take the bull by the horns and spend a couple of hours going through each piece of code and merging all the different views into a system that made sense. After we did that, it was a joy to work on that codebase.</p>
 </div>
 
