--- a/projects/betterbet.html
+++ b/projects/betterbet.html
@@ -78,7 +78,7 @@
 <div class="block">
 <h2>Limitations</h2>
 
-<p>I was familiar with the <a href="https://neat.bourbon.io">Neat</a> framework from <a href="http://thoughtbot.com/">Thoughbot</a>, I love this framework because it is very simple and flexible, and keeps the HTML and CSS free of presentation class names. It also allows you to prototype and try ideas really fast, and takes care of a lot of browser render differences. So, having just 5 days to complete the project, Neat was the way to go.</p>
+<p>I was familiar with the <a href="http://neat.bourbon.io">Neat</a> framework from <a href="http://thoughtbot.com/">Thoughbot</a>, I love this framework because it is very simple and flexible, and keeps the HTML and CSS free of presentation class names. It also allows you to prototype and try ideas really fast, and takes care of a lot of browser render differences. So, having just 5 days to complete the project, Neat was the way to go.</p>
 </div>
 
 <div class="block">
